<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbackground"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/player_1"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/player_2"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/currPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/current_player"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/PlayerWins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playerwins"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:textSize="28sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dice1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/button_text"
            android:src="@drawable/dice1" />

        <ImageView
            android:id="@+id/dice2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/button_text"
            app:srcCompat="@drawable/dice2" />


    </LinearLayout>

    <Button
        android:id="@+id/rollButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/background_light"
        android:text="@string/button_text" />

    <Button
        android:id="@+id/holdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/background_light"
        android:text="@string/hold" />

    <TextView
        android:id="@+id/turn_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/turn_total"
        android:textSize="28sp" />

</LinearLayout>